# ImageAligner

./: .gitignore  CMakeLists.txt  flake.nix
include/cv/: context.hpp
include/img/: fits.hpp  provider.hpp  sequence.hpp
include/io/: fits.hpp  provider.hpp  sequence.hpp
include/objects/: image.hpp  matrix.hpp  registration.hpp  stats.hpp
include/ui/: app.hpp  state.hpp  window.hpp
include/ui/objects/: image.hpp  matrix.hpp
include/ui/pages/: cv.hpp  page.hpp
include/ui/widgets/: alignment_view.hpp  gl_area_plus.hpp  main_view.hpp  sequence_list.hpp  util.hpp
include/ui/widgets/gl/: buffer.hpp  object.hpp  program.hpp  texture.hpp  vao.hpp
resource/css/: main.scss
resource/gl/align/: frag.glsl  vert.glsl
resource/gl/keypoint/: frag.glsl  vert.glsl
resource/gl/main/: frag.glsl  vert.glsl
resource/gl/match/: frag.glsl  vert.glsl
resource/gl/selector/: frag.glsl  vert.glsl
resource/scheme/: cv.blp  main.blp
src/: main.cpp
src/cv/: context.cpp
src/img/: fits.cpp  provider.cpp  sequence.cpp
src/io/: fits.cpp  provider.cpp  sequence.cpp
src/objects/: image.cpp  matrix.cpp  registration.cpp  stats.cpp
src/ui/: app.cpp  state.cpp  window.cpp
src/ui/objects/: image.cpp  matrix.cpp
src/ui/pages/: cv.cpp  page.cpp
src/ui/scheme/: main.blp  main.scss  settings
src/ui/widgets/: alignment_view.cpp  gl_area_plus.cpp  main_view.cpp  sequence_list.cpp  util.cpp
src/ui/widgets/gl/: buffer.cpp  object.cpp  program.cpp  texture.cpp  vao.cpp
test/: CMakeLists.txt
test/src/: seq_simple_read_test.cpp  seq_util.hpp  seq_writeback_test.cpp
